force-app/main/default/objects/natterbox__nbCallCenterConfig__c/natterbox__nbCallCenterConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Natterbox Call Center configuration settings. These settings are hierarchical - organisation-wide defaults can be overridden for different Profiles or different individual Users.</description>
    <label>Natterbox Call Center</label>
</CustomObject>