force-app/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Call_List_Template_3__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Call_List_Template_3__c</fullName>
    <description>Continuation of template from call list template 2</description>
    <label>Call List Template 3</label>
    <type>TextArea</type>
</CustomField>