force-app/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Custom_Log_Template_2__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Custom_Log_Template_2__c</fullName>
    <description>Continuation of template for customization of Logging. Space in this field is limited to 255 characters. If more is required, overflow into Custom Log Template 3</description>
    <label>Custom Log Template 2</label>
    <type>TextArea</type>
</CustomField>