force-app/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Custom_Log_Template_3__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Custom_Log_Template_3__c</fullName>
    <description>Continuation of template for customization of Logging.</description>
    <label>Custom Log Template 3</label>
    <type>TextArea</type>
</CustomField>