force-app/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Custom_Log_Template_4__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Custom_Log_Template_4__c</fullName>
    <description>Continuation of template for customization of Logging.</description>
    <label>Custom Log Template 4</label>
    <type>TextArea</type>
</CustomField>