force-app/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Custom_Log_Template__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Custom_Log_Template__c</fullName>
    <description>Template for customization of Logging. Space in this field is limited to 255 characters. If more is required, overflow into Custom Log Template 2</description>
    <label>Custom Log Template</label>
    <type>TextArea</type>
</CustomField>