force-app/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Disable_Withhold_Caller_ID__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Disable_Withhold_Caller_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, &apos;Withhold my caller ID&apos; is not shown in the UI as an option under &apos;My caller ID&apos;</description>
    <label>Disable Withhold Caller ID</label>
    <type>Checkbox</type>
</CustomField>