force-app/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Groups_Support__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Groups_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to enable login/logout to/from hunt groups, call queues etc from the CTI</description>
    <inlineHelpText>Check this box to enable login/logout to/from hunt groups, call queues etc from the CTI</inlineHelpText>
    <label>Groups Support</label>
    <type>Checkbox</type>
</CustomField>