force-app/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Offer_Skip_Wrapup_Conditions__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Offer_Skip_Wrapup_Conditions__c</fullName>
    <defaultValue>&quot;never&quot;</defaultValue>
    <description>When should CTI wrapup show the &#39;disregard call&#39; button which when pressed skips logging the call in SF</description>
    <inlineHelpText>When should CTI wrapup show the &#39;disregard call&#39; button which when pressed skips logging the call in SF</inlineHelpText>
    <label>Offer Skip Wrapup Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>