force-app/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Show_Features_Under_Development__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Show_Features_Under_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Features Under Development</label>
    <type>Checkbox</type>
</CustomField>