force-app/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Wrap_Call_Info_Content__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Wrap_Call_Info_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wraps call information content across multiple lines</inlineHelpText>
    <label>Wrap Call Info Content</label>
    <type>Checkbox</type>
</CustomField>