force-app/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Wrapup_Codes_Inbound_14__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Wrapup_Codes_Inbound_14__c</fullName>
    <description>Continuation of wrapup codes for inbound calls. Space in this field is limited to 255 characters. If more is required, overflow into Wrapup Codes Inbound 15</description>
    <label>Wrapup codes (inbound calls) 14</label>
    <type>TextArea</type>
</CustomField>