force-app/main/default/objects/natterbox__nbCallCenterConfig__c/fields/natterbox__Wrapup_Codes_Inbound__c.field-meta.xml
<CustomField>
    <fullName>natterbox__Wrapup_Codes_Inbound__c</fullName>
    <defaultValue>&quot;Call successful:0,Appointment set:3,Able to pitch:4,Decision maker not reached:5&quot;</defaultValue>
    <description>Wrapup codes to be used in the call logs. Comma or newline separated list of text codes, with a numric identifier appended after a colon, eg: &quot;Call Successful:0,Call Failed:1&quot;</description>
    <label>Wrapup codes (inbound calls)</label>
    <type>TextArea</type>
</CustomField>